fix overflow

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -46,6 +46,9 @@ body
   code
     hyphens(manual)
 
+  article
+    word-break: break-word
+
   a
     color: $color-text
     text-decoration: none
